--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: formdb
+      ENCODING: UTF8
+      LC_COLLATE: en_US.UTF-8
+      LC_CTYPE: en_US.UTF-8
     ports:
       - '5432:5432'
     volumes:
